k8s/policies/gatekeeper/constraints/k8s-disallow-defaultsa-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowDefaultSA
metadata:
  name: disallow-default-sa
spec:
  enforcementAction: deny
  match:
    namespaceSelector:
      matchLabels:
        security-level: hardened
