k8s/policies/gatekeeper/constraints/k8s-restrict-wildcardRBAC-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictWildcardRBAC
metadata:
  name: restrict-wildcard-rbac
spec:
  enforcementAction: deny
  match:
    namespaceSelector:
      matchLabels:
        security-level: hardened
    kinds:
    - apiGroups: ["rbac.authorization.k8s.io"]
      kinds: ["Role", "ClusterRole", "RoleBinding", "ClusterRoleBinding"]
