k8s/policies/gatekeeper/constraints/restrict-secret-access-rbac-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictSecretAccessRBAC
metadata:
  name: restrict-secret-access-rbac
spec:
  enforcementAction: deny
  match:
    namespaceSelector:
      matchLabels:
        security-level: hardened
    kinds:
    - apiGroups: ["rbac.authorization.k8s.io"]
      kinds: ["Role", "ClusterRole"]
