k8s/policies/gatekeeper/constraints/strict-pod-security-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sStrictPodSecurity
metadata:
  name: enforce-strict-pod-security
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
    namespaces:
    - hardened
